fixing reset password function
